# Inverse-auto-Rviz

mbot/control/: CMakeLists.txt  package.xml
mbot/control/config/: param.yaml
mbot/control/launch/: vi (copy).launch  vi.launch
mbot/control/src/: control.cpp  dynamic.cpp  inverted-pendulum_control_node.cpp
mbot/mbot_description/: package.xml
mbot/mbot_description/config/: fake_mbot_arbotix.yaml
mbot/mbot_description/launch/: display_mbot_base_urdf (copy).launch  display_mbot_base_urdf.launch
mbot/mbot_description/urdf/: iiwa.urdf  mbot_base.urdf
